<resources>
    <string name="app_name">Risaalatul Mu`awanah</string>
    <string name="app_description">Habib Abdullah bin Alawi Al-Haddad</string>

    <string name="menu_search">Masukkan kata</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="action_settings">Settings</string>
    <string name="action_dark_mode">Dark Mode</string>
    <string name="action_intro">Introduction</string>

    <string name="no_internet">No internet connection</string>
    <string name="not_found">Data tidak ditemukan</string>

    <string name="app_id">ca-app-pub-5206172306814984~9959114029</string>
    <string name="banner_ads">ca-app-pub-5206172306814984/3508243984</string>
    <string name="interstitilal_ads">ca-app-pub-5206172306814984/2052703845</string>

<!--    <string name="banner_ads_">ca-app-pub-3940256099942544/6300978111</string>-->

    <string name="laporan_iklan">Laporkan iklan yg tidak sesuai syariat</string>
    <string name="about_devs">kitabkuning.id by Daarul Hijrah Technology</string>

    <!--information tab name-->
    <string name="information_tab1">DH Tech</string>
    <string name="information_tab2">Kitabkuning.id</string>
    <string name="information_tab3">Hubungi Kami</string>
    <string name="information_tab4">Transaksi</string>

    <string name="hint_email_subject">Subject :</string>
    <string name="hint_email_message">Message :</string>
    <string name="button_send">Send</string>

    <string name="title_about">About</string>
    <string name="title_info">Informasi</string>


    <!--app about information-->
    <string name="app_version">Version 1.0</string>
    <string name="app_copyright">Copyright &#169; Kitab Kuning Digital \n All rights reserved</string>
    <string name="app_email">kitabkuningdigital@gmail.com</string>
    <string name="share_summary">Share to your friends</string>
    <string name="rate_summary">Give your rate and feedback</string>
    <string name="more_summary">More apps from developer</string>
    <string name="title_app_name">Application Name</string>
    <string name="title_app_version">Build Version</string>
    <string name="title_app_email">Email</string>
    <string name="title_app_copyright">Copyright</string>
    <string name="title_app_share">Share</string>
    <string name="title_app_rate">Rate</string>
    <string name="title_app_more">More</string>
    <string name="more_apps">https://play.google.com/store/apps/developer?id=Kitab+Kuning+Digital</string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from https://daarulhijrah.com in PlayStore</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <!-- SETTING -->

    <string-array name="prefTeksLatinSize">
        <item name="small">Small</item>
        <item name="medium">Medium</item>
        <item name="large">Large</item>
    </string-array>

    <string-array name="prefTeksLatinValueSize">
        <item name="small">16</item>
        <item name="medium">20</item>
        <item name="large">26</item>
    </string-array>

    <string-array name="prefDevice">
        <item name="mini">SmartPhone 4"</item>
        <item name="small">LargePhone 6"</item>
        <item name="medium">Tablet 10"</item>
        <item name="large">TV 32"</item>
    </string-array>

    <string-array name="prefDeviceCSS">
        <item name="mini">style.css</item>
        <item name="small">style_big.css</item>
        <item name="medium">style_tablet.css</item>
        <item name="large">style_tv.css</item>
    </string-array>

    <string-array name="prefTeksArabSize">
        <item name="small">Small</item>
        <item name="medium">Medium</item>
        <item name="large">Large</item>
    </string-array>

    <string-array name="prefTeksArabValueSize">
        <item name="small">21</item>
        <item name="medium">26</item>
        <item name="large">30</item>
    </string-array>

    <string-array name="prefKontentFont">
        <item name="ori">Original</item>
        <item name="small">Nefel Adeti</item>
        <item name="medium">Noorehira</item>
        <item name="large">Quran Majeed</item>
        <item name="xlarge">Traditional Arabic</item>
        <item name="xxlarge">Arab Utsmani</item>
    </string-array>

    <string-array name="prefKontenFontCSS">
        <item name="ori"></item>
        <item name="small">font_nefel_adeti.css</item>
        <item name="medium">font_noorehira.css</item>
        <item name="large">font_quran_majeed.css</item>
        <item name="xlarge">font_trad_arabic.css</item>
        <item name="xxlarge">font_arab_kemenag.css</item>
    </string-array>



    <string name="apps_setting">Apps Setting</string>
    <string name="ket_fontarab">Choose Arabic Font</string>
    <string name="ket_fontlatin">Choose Latin Font</string>
    <string name="ket_fontlatinsize">Choose Latin Font Size</string>
    <string name="ket_fontarabsize">Choose Arabic Font Size</string>
    <string name="ket_theme">Choose Theme (Light/Dark)</string>
    <string name="ket_order">Choose Order Type</string>

    <string-array name="prefTeksArab">
        <item name="normal">Normal</item>
        <item name="noorehira">Noorehira</item>
        <item name="quran_majeed">Quran Majeed</item>
        <item name="trad_arabic">Traditional Arabic</item>
        <item name="arab_kemenag">Arab Kemenag</item>
    </string-array>

    <string-array name="prefTeksArabValue">
        <item name="normal"></item>
        <item name="noorehira">noorehira.ttf</item>
        <item name="quran_majeed">quran_majeed.ttf</item>
        <item name="trad_arabic">traditional_arabic.ttf</item>
        <item name="arab_kemenag">arab_kemenag.ttf</item>
    </string-array>

    <string-array name="prefTeksLatin">
        <item name="normal">Normal</item>
        <item name="droidsanserif">Droid SanSerif</item>
        <item name="nefel">Nefel Adeti</item>
    </string-array>

    <string-array name="prefTeksLatinValue">
        <item name="normal"></item>
        <item name="droidsanserif">droidsanserif_latin.ttf</item>
        <item name="nefel">nefel_adeti.ttf</item>
    </string-array>

    <string-array name="isDarkModeOn">
        <item name="LightMode">Light Mode</item>
        <item name="DarkMode">Dark Mode</item>
    </string-array>

    <string-array name="isDarkModeOnValue">
        <item name="LightMode">false</item>
        <item name="DarkMode">true</item>
    </string-array>
</resources>
