<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:card_view="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:visibility="gone"
    android:background="#e7e7e7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/sclDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="8sp"
                card_view:cardUseCompatPadding="true">

                <TextView
                    android:id="@+id/tv_frag_detail_kitab_judul_arab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:textColor="@color/black"
                    android:layout_margin="10dp"
                    android:textSize="22sp"
                    android:gravity="center_horizontal"
                    android:text="Produk"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_frag_detail_kitab_judul_indonesia"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center|top"
                    android:layout_marginBottom="4px"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="20dp"
                    android:visibility="gone"/>

            </android.support.v7.widget.CardView>


            <TextView
                android:id="@+id/idescka"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textSize="4sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingBottom="3dp"
                android:paddingTop="3dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_frag_detail_kitab_gambar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/image2"
                    />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="8sp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/txtSubText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:textColor="@color/black"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/app_name"
                        android:textSize="16sp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txtKonten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="18dp"
                        android:textColor="@color/black"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center|top"
                        android:text="@string/app_name"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textColor="@color/black"
                        android:layout_margin="8dp"
                        android:textIsSelectable="true"
                        android:textSize="28sp" />



                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--<com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adUnitId="@string/native_ads"
                app:adSize="320x80" />-->

            <TextView
                android:id="@+id/idesck"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:textSize="3sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="8sp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <WebView
                        android:id="@+id/wv_fragment_detail_kitab_isi_arab"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardElevation="8sp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/white">

                    <WebView
                        android:id="@+id/wv_fragment_detail_kitab_isi_indonesia"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/rel_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:adUnitId="@string/banner_ads"
                    app:adSize="MEDIUM_RECTANGLE" />

                <TextView
                    android:id="@+id/text_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:layout_marginTop="2dp"
                    android:text="Laporkan kami jika iklan tidak sesuai dengan norma agama"/>


            </LinearLayout>

        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>

<ProgressBar
    android:id="@+id/prgLoading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:visibility="gone"/>

<TextView
    android:id="@+id/txtAlert"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/no_internet"
    android:textSize="14sp"
    android:visibility="gone"
    android:layout_centerInParent="true" />



</RelativeLayout>


